--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </aside>
         <section>
             <article>
-                <img src="https://github.com/okcelen/HTML-Odev-03/blob/main/d.jpg" width="400" alt="cilekli">
+                <img src="https://github.com/okcelen/Resimler/blob/main/d.jpg?raw=true" width="400" alt="cilekli">
     </center>
             <h2 id="materials">Malzemeler</h2>
     
@@ -80,8 +80,8 @@
                 
             <h2 id="images">Görseller</h2>
                 <center>
-                <img width="800" src="https://github.com/okcelen/HTML-Odev-03/blob/main/des%20.jpg" alt="mag">
-                <img width="800" src="https://github.com/okcelen/HTML-Odev-03/blob/main/de.jpg" alt="dessert">
+                <img width="800" src="https://github.com/okcelen/Resimler/blob/main/des%20.jpg?raw=true" alt="mag">
+                <img width="800" src="https://github.com/okcelen/Resimler/blob/main/de.jpg?raw=true" alt="dessert">
                 </center>
             </article>
         </section>
